--- a/index.html
+++ b/index.html
@@ -13,42 +13,43 @@
 <body>
 
     <header class="group">
+        <div class="background group">
+            <ul class="float-left">
+                <li class="btn-small">
+                    <a href="home.html">Domů</a>
+                </li>
+                <li class="btn-small">
+                    <a href="about.html">O mně</a>
+                </li>
+                <li class="btn-small">
+                    <a href="CV.html">Životopis</a>
+                </li>
+                <li class="btn-small">
+                    <a href="Contact">Kontakt</a>
+                </li>
+            </ul>
 
-        <ul class="float-left">
-            <li class="btn-small">
-                <a href="home.html">Domů</a>
-            </li>
-            <li class="btn-small">
-                <a href="about.html">O mně</a>
-            </li>
-            <li class="btn-small">
-                <a href="CV.html">Životopis</a>
-            </li>
-            <li class="btn-small">
-                <a href="Contact">Kontakt</a>
-            </li>
-        </ul>
-
-        <ul class="float-right">
-            <li>
-                <a href="https://www.instagram.com/barca_hubickova/" target="_blank">
-                    <img src="img/instagram.png" alt="">
-                </a>
-            </li>
-            <li>
-                <a href="https://github.com/OfficialBrogle" target="_blank">
-                    <img src="img/github.png" alt="">
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="img/email.png" alt="" target="_blank">
-                </a>
-            </li>
-            <li>
-                <a href="img/Barbora_Hubičková_cz_CV.pdf" download="Barbora_Hubickova_CV" class="btn cv" target="_blank">Stáhni si můj životopis</a>
-            </li>
-        </ul>
+            <ul class="float-right">
+                <li>
+                    <a href="https://www.instagram.com/barca_hubickova/" target="_blank">
+                        <img src="img/instagram.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/OfficialBrogle" target="_blank">
+                        <img src="img/github.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/email.png" alt="" target="_blank">
+                    </a>
+                </li>
+                <li>
+                    <a href="img/Barbora_Hubičková_cz_CV.pdf" download="Barbora_Hubickova_CV" class="btn cv" target="_blank">Stáhni si můj životopis</a>
+                </li>
+            </ul>
+        </div>
         <div class="img">
             <img src="img/meh.svg" alt="">
             <div class="popis">
