přidán a upraven main

--- a/index.html
+++ b/index.html
@@ -45,13 +45,22 @@
                         <img src="img/email.png" alt="" target="_blank">
                     </a>
                 </li>
+                <li class="visible">
+                    <a href="img/Barbora_Hubičková_cz_CV.pdf" download="Barbora_Hubickova_CV" class="hidden" target="_blank">CV</a>
+                </li>
                 <li>
                     <a href="img/Barbora_Hubičková_cz_CV.pdf" download="Barbora_Hubickova_CV" class="btn cv" target="_blank">Stáhni si můj životopis</a>
                 </li>
+
             </ul>
+
+            <a href="#" class="menu">
+                <img src="img/menu-button-of-three-horizontal-lines.png" alt="">
+            </a>
+
         </div>
         <div class="img">
-            <img src="img/meh.svg" alt="">
+            <img src="img/meh1.svg" alt="">
             <div class="popis">
                 <h1>
                     Ahoj, já jsem Bára.
@@ -59,10 +68,46 @@
                 <p>Vítám tě na své stránce, kterou jsem napsala a upravila pomocí HTML,CSS a JS.</p>
             </div>
         </div>
-
-
     </header>
 
+    <main class="group">
+        <img src="img/Návrh bez názvu (3).png" alt="">
+        <h2 class="header">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut error ad deleniti ipsam aperiam magnam repellendus placeat recusandae quos nihil architecto, impedit aliquid esse modi debitis accusantium iste minus magni?
+        </h2>
+        <div class="group float">
+            <aside class="right">
+                <h1>Lorem ipsum dolor</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi sequi dolorum incidunt. Esse error eum minima obcaecati quidem sunt nisi pariatur eius delectus! Eveniet autem veritatis ducimus, unde enim totam.</p>
+            </aside>
+            <article class="left">
+                <h1>Lorem ipsum dolor</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi sequi dolorum incidunt. Esse error eum minima obcaecati quidem sunt nisi pariatur eius delectus! Eveniet autem veritatis ducimus, unde enim totam.</p>
+            </article>
+        </div>
+
+        <article>
+            <h1>Lorem ipsum dolor.</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat veniam optio, molestiae repudiandae, atque saepe ex vel a debitis delectus quibusdam? Atque voluptatum et eligendi unde tenetur blanditiis odit non. Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Asperiores voluptatum animi ipsum earum ratione consectetur corporis odit minus architecto similique, incidunt iure non quae sapiente repellendus dolore quasi illum deleniti. </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sunt quod error ipsam animi, quae fugit est veniam quasi officia. Sapiente soluta cum aspernatur eum harum totam corrupti in maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ipsa molestiae esse veritatis sunt fugit omnis consectetur maiores vitae saepe, unde pariatur tempore rem nulla distinctio ducimus aperiam cupiditate ut?</p>
+        </article>
+
+        <article>
+            <h1>Lorem ipsum dolor.</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat veniam optio, molestiae repudiandae, atque saepe ex vel a debitis delectus quibusdam? Atque voluptatum et eligendi unde tenetur blanditiis odit non. Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Asperiores voluptatum animi ipsum earum ratione consectetur corporis odit minus architecto similique, incidunt iure non quae sapiente repellendus dolore quasi illum deleniti. </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sunt quod error ipsam animi, quae fugit est veniam quasi officia. Sapiente soluta cum aspernatur eum harum totam corrupti in maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ipsa molestiae esse veritatis sunt fugit omnis consectetur maiores vitae saepe, unde pariatur tempore rem nulla distinctio ducimus aperiam cupiditate ut?</p>
+        </article>
+    </main>
+
+
+
+    <script src="js/script.js"></script>
 </body>
 
 
